apps/omni/base/manifests/omni-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omni
  namespace: omni
  labels:
    app: omni
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: omni
  template:
    metadata:
      labels:
        app: omni
    spec:
      containers:
        - name: omni
          image: ghcr.io/siderolabs/omni:v1.0.0
          args:
            - --account-id='af3f49dd-8319-412f-93a1-3167788527e6'
            - --name=omni
            - --cert=/etc/omni/tls/tls.crt
            - --key=/etc/omni/tls/tls.key
            - --machine-api-cert=/etc/omni/tls/tls.crt
            - --machine-api-key=/etc/omni/tls/tls.key
            - --bind-addr=0.0.0.0:8080
            - --machine-api-bind-addr=0.0.0.0:8095
            - --k8s-proxy-bind-addr=0.0.0.0:8100
            - --private-key-source=file:///omni.asc
            - --enable-break-glass-configs
            - --auth-saml-enabled=true
            - --etcd-backup-local-path=/backups
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - NET_ADMIN
          resources:
            limits:
              squat.ai/tun: 1
          ports:
            - name: omni
              containerPort: 8080
              protocol: TCP
            - name: siderolink
              containerPort: 8095
              protocol: TCP
            - name: k8s-proxy
              containerPort: 8100
              protocol: TCP
            - name: wireguard
              containerPort: 50180
              protocol: UDP
          volumeMounts:
            - name: omni-etcd
              mountPath: /_out
            - name: omni-backups
              mountPath: /backups
            - name: omni-asc
              mountPath: /omni.asc
              subPath: "omni.asc"
              readOnly: true
            - name: omni-tls
              mountPath: /etc/omni/tls
              readOnly: true
      volumes:
        - name: omni-etcd
          persistentVolumeClaim:
            claimName: omni-etcd
        - name: omni-backups
          persistentVolumeClaim:
            claimName: omni-backups
        - name: omni-asc
          secret:
            secretName: op-omni
        - name: omni-tls
          secret:
            secretName: omni-tls
