apps/omni/base/manifests/omni-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omni
  namespace: omni
  labels:
    app: omni
spec:
  selector:
    app: omni
  type: LoadBalancer

  ports:
    - name: siderolink
      port: 8095
      protocol: TCP
    - name: wireguard
      port: 50180
      protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: omni-ui
  namespace: omni
  labels:
    app: omni
  # annotations:
  #   tailscale.com/hostname: "omni"
  #   tailscale.com/tags: "tag:core,tag:admin-app"
  #   external-dns.alpha.kubernetes.io/hostname: REDACTED.

spec:
  selector:
    app: omni
  type: LoadBalancer
  loadBalancerClass: tailscale

  ports:
    - name: omni-ui
      port: 443
      targetPort: 8080
      protocol: TCP
    - name: k8s-proxy
      port: 8100
      protocol: TCP
