apps/omni/base/manifests/omni-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omni-ui
  namespace: omni
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPCS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts: {}
  #     secretName: omni-tls
  rules:
    - host: {}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: omni-ui
                port:
                  number: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omni-k8s
  namespace: omni
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPCS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts: {}
  #     secretName: omni-tls
  rules:
    - host: {}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: omni-k8s
                port:
                  number: 443
